--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,70 +1,69 @@
-<div class="content-wrapper">
-    <div class="search-container container-fluid">
-        <!-- <div ng-if="!search.statuses" class="input-container container">
-            <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
-           <div class="form-group">
-             <input ng-model="term" type="text" class="form-control" id="navbar-search-input" placeholder="Search">
-           </div>
-         </form>
-            <div class="clearfix"></div>
-         </div> -->
+<div class="AdaptiveSearchTitle u-bgUserColor">
+    <h1 class="AdaptiveSearchTitle-title" dir="ltr">{{root.globalSearchTerm}}</h1>
+</div>
+<div class="AppContainer">
+    <div class="AdaptiveFiltersBar" ng-show="search.showResult">
+        <ul class="AdaptiveFiltersBar-nav">
+            <!-- <li class="AdaptiveFiltersBar-item u-borderUserColor is-selected">
+                <a class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav" href="/search?q=IPL&amp;src=typd&amp;vertical=default" title="Top" data-nav="search_filter_top">
+                    <span class="AdaptiveFiltersBar-label">Top</span>
+                </a>
+            </li> -->
+            <li  ng-class="(search.currentFilter === 'live') ? 'active' : ''" ng-click="search.filterLive()" class="AdaptiveFiltersBar-item u-borderUserColor ">
+                <a href="#" class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav"><span class="AdaptiveFiltersBar-label">Live</span></a>
+            </li>
+            <li  ng-class="(search.currentFilter === 'accounts') ? 'active' : ''" ng-click="search.filterAccounts()" class="AdaptiveFiltersBar-item u-borderUserColor ">
+                <a href="#" class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav"><span class="AdaptiveFiltersBar-label">Accounts</span></a>
+            </li>
+            <li  ng-class="(search.currentFilter === 'photos') ? 'active' : ''" ng-click="search.filterPhotos()" class="AdaptiveFiltersBar-item u-borderUserColor ">
+                <a href="#" class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav"><span class="AdaptiveFiltersBar-label">Photos</span></a>
+            </li>
+            <li  ng-class="(search.currentFilter === 'videos') ? 'active' : ''" ng-click="search.filterVideos()" class="AdaptiveFiltersBar-item u-borderUserColor ">
+                <a href="#" class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav"><span class="AdaptiveFiltersBar-label">Videos</span></a>
+            </li>
+            <li  ng-class="(search.currentFilter === 'map') ? 'active' : ''" ng-click="search.filterMap()" class="AdaptiveFiltersBar-item u-borderUserColor ">
+                <a href="#" class="AdaptiveFiltersBar-target AdaptiveFiltersBar-target--link u-textUserColor js-nav"><span class="AdaptiveFiltersBar-label">Map</span></a>
+            </li>
+            
+        </ul>
+    </div>
+    <!-- Main results -->
 
-        
-        <!-- Main content -->
-        <div class="container content-container">
-            <!-- Left content: Who to follow, trends -->
-            <div class="col-md-3"></div>   
-
-            <!-- Center result + option filters -->
-            <div ng-show="search.showResult" class="result-container col-md-6">
-                <!-- Filters -->
-                <div class="filters-container">
-                    <ul class="search-modes">
-                        <!-- General filters -->
-                        <li  ng-class="(search.currentFilter === 'live') ? 'active' : ''" ng-click="search.filterLive()">
-                            <a href="#">live</a>
-                        </li>
-                        <li  ng-class="(search.currentFilter === 'accounts') ? 'active' : ''" ng-click="search.filterAccounts()">
-                            <a href="#">accounts</a>
-                        </li>
-                        <li  ng-class="(search.currentFilter === 'photos') ? 'active' : ''" ng-click="search.filterPhotos()">
-                            <a href="#">photos</a>
-                        </li>
-                        <li ng-class="(search.currentFilter === 'videos') ? 'active' : ''" ng-click="search.filterVideos()">
-                            <a href="#">videos</a>
-                        </li>
-                        <li ng-class="(search.currentFilter === 'map') ? 'active' : ''" ng-click="search.filterMap()">
-                            <a href="#">map</a>
-                        </li>
-                        <li><a href="#">More options</a></li>
-                    </ul>
+    <div class="Grid Grid--withGutter">
+        <div class="Grid-cell u-size1of3 u-lg-size1of4">
+            <div class="AdaptiveRelatedSearches">
+                <div class="AdaptiveSearchPage-moduleHeader">
+                    <h3 class="AdaptiveSearchPage-moduleTitle">Related searches</h3>
                 </div>
-
-                <!-- New status from background updating process -->
-                <button ng-show="search.newStasuses.length > 0" class="more-result" ng-click="search.showNewStatuses();">Load {{search.noOfNewStatuses}} new results!</button>
-
-                <!-- Main results -->
-                <div ng-if="!search.peopleSearch" class="main-result-container">
-                    <div ng-repeat="status in search.statuses" status open-swipe="search.openSwipe" data="status"></div>   
+                <ul class="AdaptiveRelatedSearches-items">
+                    <li class="AdaptiveRelatedSearches-item" dir="ltr">
+                        <a class="AdaptiveRelatedSearches-itemAnchor" href="/search?q=%40lalitkmodi&amp;src=rela">@lalitkmodi
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="Grid-cell u-size2of3 u-lg-size3of4">
+            <div class="Grid Grid--withGutter">
+                <div class="Grid-cell u-size2of2 u-lg-size2of3">
+                    <div id="timeline" class="content-main AdaptiveSearchTimeline" role="main">
+                        <div ng-if="!search.peopleSearch" class="main-result-container">
+                            <div ng-repeat="status in search.statuses" status open-swipe="search.openSwipe" data="status"></div>   
+                        </div>
+                    </div>
+                    <div class="AdaptiveStreamUserGallery-user js-stream-item">
+                        <!-- People results -->
+                        <div ng-if="search.peopleSearch" class="Grid-cell">
+                            <div class="Grid Grid--withGutter">
+                            <div class="Grid-cell u-size1of2">
+                            <div class="ProfileCard js-actionable-user" ng-repeat="account in search.accounts" account data="account">
+                            </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <!-- People results -->
-                <div ng-if="search.peopleSearch" class="main-result-container">
-                    <div ng-repeat="account in search.accounts" account data="account"></div>
-                </div>
-
-               
             </div>
-             <!-- Map result -->
-            <div ng-show="search.showMap" class="search-map-wrapper">
-                <div id="search-map" style="width:100%; height:100vh;"></div>
-            </div>
-
-            <!-- Right content: Other statistics -->
-            <div class="dashboard dashboard-right col-md-3">
-
-            </div>
-
         </div>
     </div>
 </div>
