Fixes the design for the individual tweet to show up on page

--- a/app/views/single-tweet.html
+++ b/app/views/single-tweet.html
@@ -1,3 +1,9 @@
-<div class="content-wrapper">
-	<div single-status open-swipe="singleTweet.openSwipe" data="singleTweet.status" show-status="singleTweet.showStatus"></div>
+<div class="permalink-container" style="margin-left: 25%;margin-top: 5%;">
+	<div role="main" class="permalink light-inline-actions  stream-uncapped">
+		<div class="permalink-inner permalink-tweet-container">
+			<div class="expansion-container js-expansion-container" style="height: auto;">
+			<div single-status open-swipe="singleTweet.openSwipe" data="singleTweet.status" show-status="singleTweet.showStatus"></div>
+			</div>
+		</div>
+	</div>
 </div>
