--- a/app/views/status.html
+++ b/app/views/status.html
@@ -3,7 +3,7 @@
         </div>
         <div class="content">
             <div class="stream-item-header">
-                <a ng-href="{{'https://twitter.com/' + data.user.screen_name}}" class="account-group js-account-group js-action-profile js-user-profile-link js-nav">
+                <a ng-href="{{'https://twitter.com/' + data.user.screen_name}}" target="_blank" class="account-group js-account-group js-action-profile js-user-profile-link js-nav">
                     <img fallback-status-id="data.user.screen_name" class="avatar js-action-profile-avatar" 
          fallback-src="/images/anon_200x200.png"
          ng-src="{{data.user.profile_image_url_https}}" alt="user-images">
