--- a/app/views/single-status.html
+++ b/app/views/single-status.html
@@ -1,22 +1,32 @@
-<div ng-show="showStatus" ng-attr-id="{{data.id_str}}" class="single-tweet tweet">
-	<div class="top-metadata">
-		<img class="avatar" 
+<div class="AppContent  wrapper-search wrapper-permalink" style="
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+">
+<div ng-show="showStatus" ng-attr-id="{{data.id_str}}" class="tweet permalink-tweet js-actionable-user js-actionable-tweet js-original-tweet                            with-user-actions           logged-in       is-loaded opened-tweet">
+	<div class="content clearfix">
+		<div class="permalink-header">
+			<div class="follow-bar">
+				<div class="user-actions btn-group not-following not-muting" data-name="" data-protected="false">
+					<button class="user-actions-follow-button js-follow-btn follow-button btn" type="button">
+						<span class="button-text follow-text">
+							<span class="fa fa-twitter"></span> Follow 
+						</span>
+					</button>
+				</div>
+			</div>
+			<a ng-href="{{'https://twitter.com/' + data.user.screen_name}}" class="account-group js-account-group js-action-profile js-user-profile-link js-nav">
+				<img class="avatar js-action-profile-avatar" 
 			 onError="this.onerror=null;this.src='/images/anon_200x200.png';"
 			 ng-src="{{data.user.profile_image_url_https}}" alt="user-images">
-			<!-- Metadata data -->
-	    <div class="user-data-wrapper">
-	    	<a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
-	    	<span class="screen-name">{{ "@" + data.user.screen_name}}</span>	
-	    </div>
-	</div>
-
-	<div class="tweet-content">
-	<!-- Main content -->
-	<p class="tweet-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted"></p>
-
-	<div class="debugged-link-container" debugged-link link-array="data.links" debuggable="debuggable"></div>
-
-	<!-- Images -->
+			 	<strong class="fullname js-action-profile-name show-popup-with-id">{{data.user.name}}</strong>
+			 	<span class="username js-action-profile-name">{{ "@" + data.user.screen_name }}</span>
+			</a>
+		</div>
+		<p class="TweetTextSize TweetTextSize--28px js-tweet-text tweet-text" ng-bind-html="data.text | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted"></p>
+		<div class="debugged-link-container" debugged-link link-array="data.links" debuggable="debuggable"></div>
+		<!-- Images -->
 	<div class="status-images-container" ng-show="!debuggable">
 		<!-- Images - 1 img -->
 		<div data-ng-click="openSwipe(data.id_str);" class="images-wrapper clearfix" ng-if="data.images_count === 1">
@@ -44,29 +54,67 @@
 		</div>
 	</div>
 	<!-- End of images -->
+	<div class="stream-item-footer">
+                    <div role="group" aria-label="Tweet actions" class="ProfileTweet-actionList u-cf js-actions">
+            </p>
+            <div class="debugged-link-container" debugged-link data="data" link-array="data.links" debuggable="debuggable"></div>
+  
+  <div class="ProfileTweet-action ProfileTweet-action--reply">
+    <button class="ProfileTweet-actionButton u-textUserColorHover js-actionButton js-actionReply js-tooltip" data-modal="ProfileTweet-reply" type="button" data-original-title="Reply">
+      <span class="fa fa-reply"></span>
+      <span class="u-hiddenVisually">Reply</span>
+    </button>
+  </div>
 
-	<!-- Action list -->
+  
+  <div class="ProfileTweet-action ProfileTweet-action--retweet js-toggleState js-toggleRt">
+    <button class="ProfileTweet-actionButton  js-actionButton js-actionRetweet js-tooltip" data-modal="ProfileTweet-retweet" type="button" data-original-title="Retweet">
+      <span class="fa fa-retweet"></span>
+      <span class="u-hiddenVisually">Retweet</span>
+        <span class="ProfileTweet-actionCount">
+          <span class="ProfileTweet-actionCountForPresentation" aria-hidden="true">{{data.retweet_count}}</span>
+        </span>
+    </button><button class="ProfileTweet-actionButtonUndo js-actionButton js-actionRetweet js-tooltip" data-modal="ProfileTweet-retweet" title="Undo retweet" type="button">
+      <span class="fa fa-retweet"></span>
+      <span class="u-hiddenVisually">Retweeted</span>
+        <span class="ProfileTweet-actionCount">
+          <span class="ProfileTweet-actionCountForPresentation" aria-hidden="true">{{data.retweet_count}}</span>
+        </span>
+    </button>
+  </div>
 
-	<div class="action-list">
-		<div class="action-reply">
-			<button class="reply" />
-		</div>
-		<div class="action-retweet">
-			<button class="retweet" /><span ng-if="data.retweet_count" class="rt-count">{{data.retweet_count}}</span>	
-		</div>
-		<div class="action-favor">
-			<button class="favor" /><span ng-if="data.favourites_count" class="fav-count">{{data.favourites_count}}</span>		
-		</div>
-		<!-- <div class="action-more">
-			<i class="fa fa-circle"></i>
-			<i class="fa fa-circle"></i>
-			<i class="fa fa-circle"></i>
-		</div> -->
+  
+  <div class="ProfileTweet-action ProfileTweet-action--favorite js-toggleState">
+    <button class="ProfileTweet-actionButton js-actionButton js-actionFavorite js-tooltip" type="button" data-original-title="Favorite">
+      <span class="fa fa-star"></span>
+      <span class="u-hiddenVisually">Favorite</span>
+        <span class="ProfileTweet-actionCount">
+            <span class="ProfileTweet-actionCountForPresentation" aria-hidden="true">{{data.favourites_count}}</span>
+        </span>
+    </button><button class="ProfileTweet-actionButtonUndo u-linkClean js-actionButton js-actionFavorite js-tooltip" title="Undo favorite" type="button">
+      <span class="Icon Icon--favorite"></span>
+      <span class="u-hiddenVisually">Favorited</span>
+        <span class="ProfileTweet-actionCount">
+            <span class="ProfileTweet-actionCountForPresentation" aria-hidden="true">{{data.favourites_count}}</span>
+        </span>
+    </button>
+  </div>
+        <div ng-show="showMoreAction" class="more-actions">
+                            <ul>
+                                <li><a class="copy-link" data-ng-click="openSingleTweet(data.id_str)">Open this single tweet</a></li>
+                            </ul>
+                        </div>
+      </div>
+                </div>
+                <!-- Hidden detailed metadata -->
+                <div ng-show="showDetail" class="detail-metadata">
+                    <span class="metadata">{{ data.created_at | date:'h:mm a - dd MMM yyyy .' }}</span> · 
+                    <span class="link-to-tweet" data-ng-click="openSingleTweet(data.id_str)">Details</span>
+                </div>
+            <!-- End of hidden detailed metadata -->
+            </div>
+        </div>
 	</div>
 
-	<!-- detailed metadata -->
-	<div class="detail-metadata">
-	    <span class="metadata">{{ data.created_at | date:'h:mm a - dd MMM yyyy .' }}</span> · 
-	</div>        
-	</div>
+</div>
 </div>
