--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -10,7 +10,7 @@
         <div class="banner col-md-3"><a ng-style="{'color': wall.wallOptions.headerForeColour} " href="/">Powered by Loklak</a></div>
         <div class="banner col-md-1">
             <!-- <i ng-style="{'color': wall.wallOptions.headerForeColour} " data-toggle="modal" data-target="#wall-modal" class="fa fa-fw fa-gear"></i> -->
-            <i ng-style="{'color': wall.wallOptions.headerForeColour} " ng-click="fullscreen()" class="fa fa-fw fa-arrows-alt"></i>
+            <i ng-style="{'color': wall.wallOptions.headerForeColour} " ng-hide="wall.fullscreenEnabled" ng-click="fullscreen()" class="fa fa-fw fa-arrows-alt"></i>
         </div>
     </div>
     <div class="wall-container container-fluid">
