--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -118,6 +118,7 @@
                 <h3 style="text-align:center;">Not on loklak ? Sign up, tune into things as they happen and get updates as they happen</h3>
             </div>
             <div class="modal-footer" style="text-align:center;">
+            <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
                 <button class="btn btn-info btn-flat" value="Sign up Via Twitter" ng-click="root.hello('twitter').login()"><i class="fa fa-twitter"></i>&nbsp;Signup with Twitter</button>
             </div>
         </div>
