--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -29,42 +29,45 @@
 			<span class="field-title">Near this place</span>
 		</div>
 
-		<div class="form-section">
-			<h3>Dates</h3>
-			<span class="field-title">From this date</span>
-			<label>Show tweets within this period: {{advanced.foo}}</label>
-			<div class="form-inline">
-                <div class="input-group dropdown">
-                <span class="input-group-addon">
-                  <span class="glyphicon glyphicon-calendar"></span>
-                </span>
-                <a class="dropdown-toggle my-toggle-select" id="datetimepicker1" role="button" data-toggle="dropdown" data-target="#" href="">
-                    <div class="input-append">
-                        <input type="text" class="form-control date-input" ng-model="advanced.sinceDate">
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker1">
-                    <datetimepicker ng-model="advanced.sinceDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour' }"></datetimepicker>
-                </ul>
-            </div>
+		<!-- Time period pickers-->
+			<div class="form-section">
+				<h3>Dates</h3>
+				<span class="field-title">From this date</span>
+				<label>Show tweets within this period: {{advanced.foo}}</label>
+				<div class="form-inline">
+	                <div class="input-group dropdown">
+	                <span class="input-group-addon">
+	                  <span class="glyphicon glyphicon-calendar"></span>
+	                </span>
+	                <a class="dropdown-toggle my-toggle-select" id="datetimepicker1" role="button" data-toggle="dropdown" data-target="#" href="">
+	                    <div class="input-append">
+	                        <input type="text" class="form-control date-input" ng-model="advanced.sinceDate">
+	                    </div>
+	                </a>
+	                <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker1">
+	                    <datetimepicker ng-model="advanced.sinceDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour' }"></datetimepicker>
+	                </ul>
+	            </div>
 
-            <div class="input-group dropdown">
-                <span class="input-group-addon">
-              <span class="glyphicon glyphicon-calendar"></span>
-                </span>
-                <a class="dropdown-toggle my-toggle-select" id="datetimepicker2" role="button" data-toggle="dropdown" data-target="#" href="">
-                    <div class="input-append">
-                        <input type="text" class="form-control date-input" ng-model="advanced.untilDate">
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker2">
-                    <datetimepicker ng-model="advanced.untilDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour' }"></datetimepicker>
-                </ul>
-            </div>
-            <button ng-click="resetDate()" class="btn btn-danger">Clear</button>
-            </div>
-		</div>		
+	            <div class="input-group dropdown">
+	                <span class="input-group-addon">
+	              <span class="glyphicon glyphicon-calendar"></span>
+	                </span>
+	                <a class="dropdown-toggle my-toggle-select" id="datetimepicker2" role="button" data-toggle="dropdown" data-target="#" href="">
+	                    <div class="input-append">
+	                        <input type="text" class="form-control date-input" ng-model="advanced.untilDate">
+	                    </div>
+	                </a>
+	                <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker2">
+	                    <datetimepicker ng-model="advanced.untilDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour' }"></datetimepicker>
+	                </ul>
+	            </div>
 
+	            </div>
+			</div>	
+		<!-- End Time period pickers-->	
+		<input type="button" ng-click="advanced.reset()" value="Reset" />
+	    <input type="submit" ng-click="advanced.process(aSearch)" value="Save" />
 	</form>
 </div>
 
